fixed media queries for resume pg - pdf will not show on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -18,58 +18,13 @@
   font-family: "Raleway", sans-serif;
 }
 
-/* .button-transition {
-  background: linear-gradient(to left, transparent 100%, #ffc107 100%) right;
-  transition: all 0.6s linear;
-} */
-
 .button-transition:hover {
   color: #3c4f3b;
 }
 
-/* this needs work - want border btm when user hovers links */
-/*
-a#nav-link-home:hover,
-a#nav-link-about:hover,
-a#nav-link-resume:hover,
-a#nav-link-projects:hover,
-a#nav-link-contact:hover {
-  color: #ffc107;
-  border-bottom: 4px solid #ffc107;
-}
-*/
-
-/* a#nav-link-home:visited,
-a#nav-link-about:visited,
-a#nav-link-resume:visited,
-a#nav-link-projects:visited,
-a#nav-link-contact:visited {
-  color: #f8f8f8;
-} */
-
-/* a#nav-link-home:link,
-a#nav-link-about:link,
-a#nav-link-resume:link,
-a#nav-link-projects:link,
-a#nav-link-contact:link {
-  color: #fff;
-} */
-
-/* #nav-link-home,
-#nav-link-about,
-#nav-link-resume,
-#nav-link-projects,
-#nav-link-contact {
-  font-size: 20px;
-} */
-
 .homePageText {
   color: #f8f8f8;
 }
-
-/* body {
-  background-color: #3c4f3b;
-} */
 
 .projectsButton {
   color: #3c4f3b;
@@ -170,11 +125,6 @@ svg:hover {
   color: #f8f8f8;
 }
 
-.no-show-on-mobile {
-  display: none;
-}
-
-
 /* media queries */
 @media (max-width: 576px) {
   #ownerName {
@@ -193,10 +143,18 @@ svg:hover {
   .mainPageFooterIcons {
     font-size: 40px;
   }
+
+  .no-show-on-mobile {
+    visibility: hidden;
+  }
 }
 
 @media (min-width: 576.1px) {
   #ownerNameContainer {
     margin-left: 1em;
+  }
+
+  .no-show-on-computer {
+    visibility: hidden;
   }
 }
